# qqmusic-api-cxx

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  404.html  CMakeLists.txt  README.md  index.html  mkdocs.yml  sitemap.xml  vcpkg-configuration.json  vcpkg.json  xmake.lua
.github/workflows/: ci.yml
Api/: index.html
Api/main_module/: index.html
Api/utils/: index.html
Contributing/: index.html
Contributing/Contributing/: index.html
Contributing/_Architecture/: index.html
Documents/album/: index.html
Documents/login/: index.html
Documents/lyric/: index.html
Documents/mv/: index.html
Documents/result/: index.html
Documents/search/: index.html
Documents/singer/: index.html
Documents/song/: index.html
Documents/song_list/: index.html
Documents/toplist/: index.html
Documents/user/: index.html
QuickStart/: index.html
cache/: device.json
demo/: CMakeLists.txt  main.cc  xmake.lua
demo/cmake/: subproj.cmake
demo/include/: argparse.h
demo/src/: qrc-decoder.cc  song-grap.cc
details/: CMakeLists.txt
details/src/: tripledes.cc
dictionary/album_8cc/: index.html
dictionary/album_8cc_source/: index.html
dictionary/album_8h/: index.html
dictionary/album_8h_source/: index.html
dictionary/annotated/: index.html
dictionary/api_8cc/: index.html
dictionary/api_8cc_source/: index.html
dictionary/api_8h/: index.html
dictionary/api_8h_source/: index.html
dictionary/async-executor_8cc/: index.html
dictionary/async-executor_8cc_source/: index.html
dictionary/async-executor_8h/: index.html
dictionary/async-executor_8h_source/: index.html
dictionary/buffer_8h/: index.html
dictionary/buffer_8h_source/: index.html
dictionary/cipher_8h/: index.html
dictionary/cipher_8h_source/: index.html
dictionary/cipher__map_8cc/: index.html
dictionary/cipher__map_8cc_source/: index.html
dictionary/cipher__map_8h/: index.html
dictionary/cipher__map_8h_source/: index.html
dictionary/cipher__rc4_8cc/: index.html
dictionary/cipher__rc4_8cc_source/: index.html
dictionary/cipher__rc4_8h/: index.html
dictionary/cipher__rc4_8h_source/: index.html
dictionary/cipher__tea_8cc/: index.html
dictionary/cipher__tea_8cc_source/: index.html
dictionary/cipher__tea_8h/: index.html
dictionary/cipher__tea_8h_source/: index.html
dictionary/class_member_enums/: index.html
dictionary/class_member_functions/: index.html
dictionary/class_member_typedefs/: index.html
dictionary/class_member_variables/: index.html
dictionary/class_members/: index.html
dictionary/classes/: index.html
dictionary/classqqmusic_1_1BaseMediaFileType/: index.html
dictionary/classqqmusic_1_1EncryptedSongFileType/: index.html
dictionary/classqqmusic_1_1QRCodeLoginEvent/: index.html
dictionary/classqqmusic_1_1SongFileType/: index.html
dictionary/classqqmusic_1_1TabType/: index.html
dictionary/classqqmusic_1_1crypto_1_1Cipher/: index.html
dictionary/classqqmusic_1_1crypto_1_1Decoder/: index.html
dictionary/classqqmusic_1_1crypto_1_1KeyDerive/: index.html
dictionary/classqqmusic_1_1crypto_1_1MapCipher/: index.html
dictionary/classqqmusic_1_1crypto_1_1RC4Cipher/: index.html
dictionary/classqqmusic_1_1details_1_1Api/: index.html
dictionary/classqqmusic_1_1utils_1_1AsyncExecutor/: index.html
dictionary/classqqmusic_1_1utils_1_1CookieJar/: index.html
dictionary/classqqmusic_1_1utils_1_1Credential/: index.html
dictionary/classqqmusic_1_1utils_1_1Exception/: index.html
dictionary/classqqmusic_1_1utils_1_1PathManager/: index.html
dictionary/classqqmusic_1_1utils_1_1Session/: index.html
dictionary/classqqmusic_1_1utils_1_1SessionGuard/: index.html
dictionary/classqqmusic_1_1utils_1_1SessionManager/: index.html
dictionary/classqqmusic_1_1utils_1_1buffer/: index.html
dictionary/common_8cc/: index.html
dictionary/common_8cc_source/: index.html
dictionary/common_8h/: index.html
dictionary/common_8h_source/: index.html
dictionary/context_8h/: index.html
dictionary/context_8h_source/: index.html
dictionary/cookie_8cc/: index.html
dictionary/cookie_8cc_source/: index.html
dictionary/cookie_8h/: index.html
dictionary/cookie_8h_source/: index.html
dictionary/credential_8cc/: index.html
dictionary/credential_8cc_source/: index.html
dictionary/credential_8h/: index.html
dictionary/credential_8h_source/: index.html
dictionary/details_2result_8h/: index.html
dictionary/details_2result_8h_source/: index.html
dictionary/device_8cc/: index.html
dictionary/device_8cc_source/: index.html
dictionary/device_8h/: index.html
dictionary/device_8h_source/: index.html
dictionary/dir_313caf1132e152dd9b58bea13a4052ca/: index.html
dictionary/dir_4261af1259721e3e39e0d2dd7354b511/: index.html
dictionary/dir_478616d8952f43e793f28d8ded6e3463/: index.html
dictionary/dir_544e59fdeba566aba49a0802b8225c84/: index.html
dictionary/dir_68267d1309a1af8e8297ef4c3efbcdba/: index.html
dictionary/dir_6e6556f41d7f85330fbda245682a6a39/: index.html
dictionary/dir_b485ae80868baed16097635ed27c0024/: index.html
dictionary/dir_d44c64559bbebec7f509842c48db8b23/: index.html
dictionary/dir_d63c0418b33b823a308efea67b8f3df2/: index.html
dictionary/exception_8h/: index.html
dictionary/exception_8h_source/: index.html
dictionary/files/: index.html
dictionary/functions/: index.html
dictionary/hierarchy/: index.html
dictionary/key__derive_8cc/: index.html
dictionary/key__derive_8cc_source/: index.html
dictionary/key__derive_8h/: index.html
dictionary/key__derive_8h_source/: index.html
dictionary/links/: index.html
dictionary/login_8cc/: index.html
dictionary/login_8cc_source/: index.html
docs/: doxyfile.cc.ini  index.md
search/: search_index.json
src/: album.cc  api.cc  data.cc  error.cc  login.cc  lyric.cc  membership.cc  mv.cc  recommend.cc  search.cc  singer.cc  song.cc  song_list.cc  songlist.cc  top.cc  toplist.cc  user.cc
test/: CMakeLists.txt
test/include/qmtest/: test-login.h
test/src/: test-login.cc  test-main.cc
utils/: CMakeLists.txt
utils/NetWork/: CMakeLists.txt
(+875 files in other folders)
